Update gitignore; add previously untracked files

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+*.iws
 .DS_Store
+.externalNativeBuild
+.gradle
+Thumbs.db
+/.idea/dictionaries
+/.idea/libraries
+/.idea/tasks.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
 /build
 /captures
-.externalNativeBuild
+/local.properties
